// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Snapshot testing minimal 1`] = `
<dl
  className={null}
  onKeyDown={[MockFunction]}
  role="presentation"
>
  <span>
    accordion items
  </span>
</dl>
`;

exports[`Accordion Snapshot testing touched state 1`] = `
<dl
  className="is-touched"
  onKeyDown={[MockFunction]}
  role="presentation"
>
  <span>
    accordion items
  </span>
</dl>
`;

exports[`Accordion Snapshot testing with more props 1`] = `
<dl
  className="accordion"
  onKeyDown={[MockFunction]}
  role="presentation"
  style={
    Object {
      "color": "inherit",
    }
  }
>
  <span>
    accordion items
  </span>
</dl>
`;
